--- a/resources/red/index.html
+++ b/resources/red/index.html
@@ -229,37 +229,8 @@
   
     <h2>
   
-    <button aria-expanded="false" data-expands="js-expandable-dbfca31be0349a8e28542563187f0bf5">
-      <span class="expandable-label">Ready stance</span>
-      <svg aria-hidden="true" focusable="false" viewBox="0 0 70.866142 70.866141">
-        <g transform="translate(0 -981.5)">
-          <rect style="stroke-width:0;fill:currentColor" ry="5" height="60" width="9.8985" y="987.36" x="30.051" class="up-strut" />
-          <rect style="stroke-width:0;fill:currentColor" ry="5" height="10" width="60" y="1012.4" x="5"/>
-        </g>
-      </svg>
-    </button>
-  
-    </h2>
-  
-  <div id="js-expandable-dbfca31be0349a8e28542563187f0bf5" hidden>
-    
-
-
-<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-  <iframe src="https://www.youtube.com/embed/_m0bc4DmczE" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
-</div>
-
-
-
-  </div>
-</div>
-
-<div class="expandable-section">
-  
-    <h2>
-  
     <button aria-expanded="false" data-expands="js-expandable-5335404dbeeae1788a7e8d5a21cdda65">
-      <span class="expandable-label">Attention stance</span>
+      <span class="expandable-label">Attention stance video</span>
       <svg aria-hidden="true" focusable="false" viewBox="0 0 70.866142 70.866141">
         <g transform="translate(0 -981.5)">
           <rect style="stroke-width:0;fill:currentColor" ry="5" height="60" width="9.8985" y="987.36" x="30.051" class="up-strut" />
@@ -283,13 +254,42 @@
   </div>
 </div>
 
+<div class="expandable-section">
+  
+    <h2>
+  
+    <button aria-expanded="false" data-expands="js-expandable-dbfca31be0349a8e28542563187f0bf5">
+      <span class="expandable-label">Ready stance video</span>
+      <svg aria-hidden="true" focusable="false" viewBox="0 0 70.866142 70.866141">
+        <g transform="translate(0 -981.5)">
+          <rect style="stroke-width:0;fill:currentColor" ry="5" height="60" width="9.8985" y="987.36" x="30.051" class="up-strut" />
+          <rect style="stroke-width:0;fill:currentColor" ry="5" height="10" width="60" y="1012.4" x="5"/>
+        </g>
+      </svg>
+    </button>
+  
+    </h2>
+  
+  <div id="js-expandable-dbfca31be0349a8e28542563187f0bf5" hidden>
+    
+
+
+<div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
+  <iframe src="https://www.youtube.com/embed/_m0bc4DmczE" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+</div>
+
+
+
+  </div>
+</div>
+
 <h2 id="blocking">Blocking</h2>
 <div class="expandable-section">
   
     <h2>
   
     <button aria-expanded="false" data-expands="js-expandable-f5cb7950a7a00191afb032f500952e4b">
-      <span class="expandable-label">Blocks</span>
+      <span class="expandable-label">Blocking video</span>
       <svg aria-hidden="true" focusable="false" viewBox="0 0 70.866142 70.866141">
         <g transform="translate(0 -981.5)">
           <rect style="stroke-width:0;fill:currentColor" ry="5" height="60" width="9.8985" y="987.36" x="30.051" class="up-strut" />
@@ -319,7 +319,7 @@
     <h2>
   
     <button aria-expanded="false" data-expands="js-expandable-d7d013422c783991d0f71cbaf56a11f7">
-      <span class="expandable-label">Movement (Blue Stripe)</span>
+      <span class="expandable-label">Movement video</span>
       <svg aria-hidden="true" focusable="false" viewBox="0 0 70.866142 70.866141">
         <g transform="translate(0 -981.5)">
           <rect style="stroke-width:0;fill:currentColor" ry="5" height="60" width="9.8985" y="987.36" x="30.051" class="up-strut" />
