--- a/resources/white/index.html
+++ b/resources/white/index.html
@@ -230,7 +230,7 @@
     <h2>
   
     <button aria-expanded="false" data-expands="js-expandable-dbfca31be0349a8e28542563187f0bf5">
-      <span class="expandable-label">Ready stance</span>
+      <span class="expandable-label">Ready stance video</span>
       <svg aria-hidden="true" focusable="false" viewBox="0 0 70.866142 70.866141">
         <g transform="translate(0 -981.5)">
           <rect style="stroke-width:0;fill:currentColor" ry="5" height="60" width="9.8985" y="987.36" x="30.051" class="up-strut" />
@@ -259,7 +259,7 @@
     <h2>
   
     <button aria-expanded="false" data-expands="js-expandable-5335404dbeeae1788a7e8d5a21cdda65">
-      <span class="expandable-label">Attention stance</span>
+      <span class="expandable-label">Attention stance video</span>
       <svg aria-hidden="true" focusable="false" viewBox="0 0 70.866142 70.866141">
         <g transform="translate(0 -981.5)">
           <rect style="stroke-width:0;fill:currentColor" ry="5" height="60" width="9.8985" y="987.36" x="30.051" class="up-strut" />
