--- a/stripes/yellow/index.html
+++ b/stripes/yellow/index.html
@@ -280,7 +280,6 @@
   </div>
 </div>
 
-<br>
 <div class="expandable-section">
   
     <h2>
@@ -310,13 +309,12 @@
   </div>
 </div>
 
-<br>
 <div class="expandable-section">
   
     <h2>
   
     <button aria-expanded="false" data-expands="js-expandable-96114e756f81e872d0025602243c5ce8">
-      <span class="expandable-label">Basic 3: Front kick/Mae geri</span>
+      <span class="expandable-label">Basic 3: Front kick (Mae geri)</span>
       <svg aria-hidden="true" focusable="false" viewBox="0 0 70.866142 70.866141">
         <g transform="translate(0 -981.5)">
           <rect style="stroke-width:0;fill:currentColor" ry="5" height="60" width="9.8985" y="987.36" x="30.051" class="up-strut" />
@@ -340,13 +338,12 @@
   </div>
 </div>
 
-<br>
 <div class="expandable-section">
   
     <h2>
   
     <button aria-expanded="false" data-expands="js-expandable-5294293d5afdfde8d4f0553b93cb8803">
-      <span class="expandable-label">Basic 4: Step up sidekick/surikomi sokuto</span>
+      <span class="expandable-label">Basic 4: Step up side kick (surikomi sokuto)</span>
       <svg aria-hidden="true" focusable="false" viewBox="0 0 70.866142 70.866141">
         <g transform="translate(0 -981.5)">
           <rect style="stroke-width:0;fill:currentColor" ry="5" height="60" width="9.8985" y="987.36" x="30.051" class="up-strut" />
@@ -400,7 +397,6 @@
   </div>
 </div>
 
-<br>
 <div class="expandable-section">
   
     <h2>
@@ -430,7 +426,6 @@
   </div>
 </div>
 
-<br>
 <div class="expandable-section">
   
     <h2>
