--- a/stripes/orange/index.html
+++ b/stripes/orange/index.html
@@ -280,7 +280,6 @@
   </div>
 </div>
 
-<br>
 <div class="expandable-section">
   
     <h2>
@@ -310,7 +309,6 @@
   </div>
 </div>
 
-<br>
 <div class="expandable-section">
   
     <h2>
@@ -340,7 +338,6 @@
   </div>
 </div>
 
-<br>
 <div class="expandable-section">
   
     <h2>
@@ -400,7 +397,6 @@
   </div>
 </div>
 
-<br>
 <div class="expandable-section">
   
     <h2>
@@ -430,13 +426,12 @@
   </div>
 </div>
 
-<br>
 <div class="expandable-section">
   
     <h2>
   
     <button aria-expanded="false" data-expands="js-expandable-11584760015608211ad17b96e84d16dd">
-      <span class="expandable-label">Solo Combination 3: Back fist/chop (uraken)/Shuto gamen</span>
+      <span class="expandable-label">Solo Combination 3: Back fist/chop (uraken/Shuto gamen)</span>
       <svg aria-hidden="true" focusable="false" viewBox="0 0 70.866142 70.866141">
         <g transform="translate(0 -981.5)">
           <rect style="stroke-width:0;fill:currentColor" ry="5" height="60" width="9.8985" y="987.36" x="30.051" class="up-strut" />
@@ -490,7 +485,6 @@
   </div>
 </div>
 
-<br>
 <div class="expandable-section">
   
     <h2>
