--- a/stripes/brown-black/index.html
+++ b/stripes/brown-black/index.html
@@ -256,7 +256,7 @@
     <h2>
   
     <button aria-expanded="false" data-expands="js-expandable-b589b8770444d83f34796cd4a3c0ac14">
-      <span class="expandable-label">Basic 5: Tobi sokuto (jumping sidekick)</span>
+      <span class="expandable-label">Basic 5: Tobi sokuto (Jumping sidekick)</span>
       <svg aria-hidden="true" focusable="false" viewBox="0 0 70.866142 70.866141">
         <g transform="translate(0 -981.5)">
           <rect style="stroke-width:0;fill:currentColor" ry="5" height="60" width="9.8985" y="987.36" x="30.051" class="up-strut" />
@@ -280,7 +280,6 @@
   </div>
 </div>
 
-<br>
 <div class="expandable-section">
   
     <h2>
