--- a/stripes/yellow-orange/index.html
+++ b/stripes/yellow-orange/index.html
@@ -280,7 +280,6 @@
   </div>
 </div>
 
-<br>
 <div class="expandable-section">
   
     <h2>
@@ -310,7 +309,6 @@
   </div>
 </div>
 
-<br>
 <div class="expandable-section">
   
     <h2>
@@ -340,13 +338,12 @@
   </div>
 </div>
 
-<br>
 <div class="expandable-section">
   
     <h2>
   
     <button aria-expanded="false" data-expands="js-expandable-5294293d5afdfde8d4f0553b93cb8803">
-      <span class="expandable-label">Basic 4: Step up sidekick/surikomi sokuto</span>
+      <span class="expandable-label">Basic 4: Step up sidekick (surikomi sokuto)</span>
       <svg aria-hidden="true" focusable="false" viewBox="0 0 70.866142 70.866141">
         <g transform="translate(0 -981.5)">
           <rect style="stroke-width:0;fill:currentColor" ry="5" height="60" width="9.8985" y="987.36" x="30.051" class="up-strut" />
@@ -400,14 +397,13 @@
   </div>
 </div>
 
-<br>
 <h2 id="solo-combinations">Solo combinations</h2>
 <div class="expandable-section">
   
     <h2>
   
     <button aria-expanded="false" data-expands="js-expandable-5cab438662c89d78942fa804068c376a">
-      <span class="expandable-label">Solo Combination 1: Sidekick to the side/Front kick/Opposite punch/Yoko sokuto/Mae geri/Gyakuzuki</span>
+      <span class="expandable-label">Solo Combination 1: Sidekick to the side/Front kick/Opposite punch (Yoko sokuto/Mae geri/Gyakuzuki)</span>
       <svg aria-hidden="true" focusable="false" viewBox="0 0 70.866142 70.866141">
         <g transform="translate(0 -981.5)">
           <rect style="stroke-width:0;fill:currentColor" ry="5" height="60" width="9.8985" y="987.36" x="30.051" class="up-strut" />
@@ -431,13 +427,12 @@
   </div>
 </div>
 
-<br>
 <div class="expandable-section">
   
     <h2>
   
     <button aria-expanded="false" data-expands="js-expandable-87894ca76145f8564bbe0d8eb876371b">
-      <span class="expandable-label">Solo Combination 2: Roundhouse kick/Opposite punch/Mawashi geri/Gyakuzuki</span>
+      <span class="expandable-label">Solo Combination 2: Roundhouse kick/Opposite punch (Mawashi geri/Gyakuzuki)</span>
       <svg aria-hidden="true" focusable="false" viewBox="0 0 70.866142 70.866141">
         <g transform="translate(0 -981.5)">
           <rect style="stroke-width:0;fill:currentColor" ry="5" height="60" width="9.8985" y="987.36" x="30.051" class="up-strut" />
@@ -461,13 +456,12 @@
   </div>
 </div>
 
-<br>
 <div class="expandable-section">
   
     <h2>
   
     <button aria-expanded="false" data-expands="js-expandable-09cb10759a5e3a165613fab8a3b0806b">
-      <span class="expandable-label">Solo Combination 3: Side kick/Back fist/Sokuto/Uraken</span>
+      <span class="expandable-label">Solo Combination 3: Side kick/Back fist (Sokuto/Uraken)</span>
       <svg aria-hidden="true" focusable="false" viewBox="0 0 70.866142 70.866141">
         <g transform="translate(0 -981.5)">
           <rect style="stroke-width:0;fill:currentColor" ry="5" height="60" width="9.8985" y="987.36" x="30.051" class="up-strut" />
