--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 
   
     
+      <meta name="description" content="Karate @ Home">
+    
   
 
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
