--- a/stripes/red-black/index.html
+++ b/stripes/red-black/index.html
@@ -32,7 +32,7 @@
 
   
   
-  <title>Red/black belt | Kamaete</title>
+  <title>Red/black belt | Kamaete: Karate at Home</title>
 </head>
 
   <body>
@@ -130,7 +130,7 @@
       <header class="intro-and-nav" role="banner">
   <div>
     <div class="intro">
-      <a class="logo" href="/" aria-label="Kamaete home page">
+      <a class="logo" href="/" aria-label="Kamaete: Karate at Home home page">
         <img src="/images/logo.svg" alt="">
       </a>
       <p class="library-desc">
