--- a/challenges/index.html
+++ b/challenges/index.html
@@ -311,7 +311,7 @@
     <h2>
   
     <button aria-expanded="false" data-expands="js-expandable-3fe8fbb9ffadf10066a54c6c125e1568">
-      <span class="expandable-label">Sensei Billy&#39;s kate/chores</span>
+      <span class="expandable-label">Sensei Billy&#39;s kata/chores</span>
       <svg aria-hidden="true" focusable="false" viewBox="0 0 70.866142 70.866141">
         <g transform="translate(0 -981.5)">
           <rect style="stroke-width:0;fill:currentColor" ry="5" height="60" width="9.8985" y="987.36" x="30.051" class="up-strut" />
