--- a/kata/index.html
+++ b/kata/index.html
@@ -32,7 +32,7 @@
 
   
   
-  <title>Kata tutorial | Kamaete: Karate at Home</title>
+  <title>Kata tutorial and demonstration | Kamaete: Karate at Home</title>
 </head>
 
   <body>
@@ -247,8 +247,9 @@
         <div>
           
   <main id="main">
-    <h1>Kata tutorial</h1>
-    <div class="expandable-section">
+    <h1>Kata tutorial and demonstration</h1>
+    <h2 id="tutorial">Tutorial</h2>
+<div class="expandable-section">
   
     <h2>
   
@@ -277,6 +278,7 @@
   </div>
 </div>
 
+<h2 id="demonstration">Demonstration</h2>
 <div class="expandable-section">
   
     <h2>
