--- a/weapons/index.html
+++ b/weapons/index.html
@@ -248,7 +248,8 @@
           
   <main id="main">
     <h1>Weapons tutorial</h1>
-    <div class="expandable-section">
+    <h2 id="nunchaku">Nunchaku</h2>
+<div class="expandable-section">
   
     <h2>
   
@@ -277,6 +278,7 @@
   </div>
 </div>
 
+<h2 id="bo">Bo</h2>
 <div class="expandable-section">
   
     <h2>
