--- a/stripes/red-black/index.html
+++ b/stripes/red-black/index.html
@@ -399,7 +399,7 @@
   
     <h2>
   
-    <button aria-expanded="false" data-expands="js-expandable-848f5b49d924553a76732fe11c38add6">
+    <button aria-expanded="false" data-expands="js-expandable-3c28e05a97b12df4554fbf67b239b15d">
       <span class="expandable-label">Blocking 2: Low block (Gedan barai)</span>
       <svg aria-hidden="true" focusable="false" viewBox="0 0 70.866142 70.866141">
         <g transform="translate(0 -981.5)">
@@ -411,12 +411,12 @@
   
     </h2>
   
-  <div id="js-expandable-848f5b49d924553a76732fe11c38add6" hidden>
+  <div id="js-expandable-3c28e05a97b12df4554fbf67b239b15d" hidden>
     
 
     
 <div style="position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden;">
-  <iframe src="https://www.youtube-nocookie.com/embed/PDcg8KWm5Do" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
+  <iframe src="https://www.youtube-nocookie.com/embed/jcilDzACZyA" style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; border:0;" allowfullscreen title="YouTube Video"></iframe>
 </div>
 
 
