--- a/stripes/blue/index.html
+++ b/stripes/blue/index.html
@@ -32,7 +32,7 @@
 
   
   
-  <title>Blue belt | Kamaete: Karate at Home</title>
+  <title>Blue belt / 5th Kyu | Kamaete: Karate at Home</title>
 </head>
 
   <body>
@@ -247,7 +247,7 @@
         <div>
           
   <main id="main">
-    <h1>Blue belt</h1>
+    <h1>Blue belt / 5th Kyu</h1>
     <h2 id="basics">Basics</h2>
 <div class="expandable-section">
   
