--- a/stripes/brown-black/index.html
+++ b/stripes/brown-black/index.html
@@ -32,7 +32,7 @@
 
   
   
-  <title>Brown/black belt | Kamaete: Karate at Home</title>
+  <title>Brown-black belt / 2nd Kyu | Kamaete: Karate at Home</title>
 </head>
 
   <body>
@@ -247,7 +247,7 @@
         <div>
           
   <main id="main">
-    <h1>Brown/black belt</h1>
+    <h1>Brown-black belt / 2nd Kyu</h1>
     <h2 id="basics">Basics</h2>
 <div class="expandable-section">
   
