--- a/stripes/red-black/index.html
+++ b/stripes/red-black/index.html
@@ -32,7 +32,7 @@
 
   
   
-  <title>Red/black belt | Kamaete: Karate at Home</title>
+  <title>Red-black belt / 10th Kyu | Kamaete: Karate at Home</title>
 </head>
 
   <body>
@@ -247,7 +247,7 @@
         <div>
           
   <main id="main">
-    <h1>Red/black belt</h1>
+    <h1>Red-black belt / 10th Kyu</h1>
     <h2 id="basics">Basics</h2>
 <div class="expandable-section">
   
