--- a/stripes/red/index.html
+++ b/stripes/red/index.html
@@ -32,7 +32,7 @@
 
   
   
-  <title>Red belt | Kamaete: Karate at Home</title>
+  <title>Red belt / 11th Kyu | Kamaete: Karate at Home</title>
 </head>
 
   <body>
@@ -247,7 +247,7 @@
         <div>
           
   <main id="main">
-    <h1>Red belt</h1>
+    <h1>Red belt / 11th Kyu</h1>
     <h2 id="stances">Stances</h2>
 <div class="expandable-section">
   
