--- a/stripes/yellow-orange/index.html
+++ b/stripes/yellow-orange/index.html
@@ -32,7 +32,7 @@
 
   
   
-  <title>Yellow/orange belt | Kamaete: Karate at Home</title>
+  <title>Yellow-orange belt / 8th Kyu | Kamaete: Karate at Home</title>
 </head>
 
   <body>
@@ -247,7 +247,7 @@
         <div>
           
   <main id="main">
-    <h1>Yellow/orange belt</h1>
+    <h1>Yellow-orange belt / 8th Kyu</h1>
     <h2 id="basics">Basics</h2>
 <div class="expandable-section">
   
