--- a/stripes/brown/index.html
+++ b/stripes/brown/index.html
@@ -32,7 +32,7 @@
 
   
   
-  <title>Brown belt | Kamaete: Karate at Home</title>
+  <title>Brown belt / 3rd Kyu | Kamaete: Karate at Home</title>
 </head>
 
   <body>
@@ -247,7 +247,7 @@
         <div>
           
   <main id="main">
-    <h1>Brown belt</h1>
+    <h1>Brown belt / 3rd Kyu</h1>
     <h2 id="basics">Basics</h2>
 <div class="expandable-section">
   
