--- a/stripes/green/index.html
+++ b/stripes/green/index.html
@@ -32,7 +32,7 @@
 
   
   
-  <title>Green belt | Kamaete: Karate at Home</title>
+  <title>Green belt / 6th Kyu | Kamaete: Karate at Home</title>
 </head>
 
   <body>
@@ -247,7 +247,7 @@
         <div>
           
   <main id="main">
-    <h1>Green belt</h1>
+    <h1>Green belt / 6th Kyu</h1>
     <h2 id="basics">Basics</h2>
 <div class="expandable-section">
   
