--- a/stripes/index.html
+++ b/stripes/index.html
@@ -256,7 +256,7 @@
             <svg class="bookmark" aria-hidden="true" viewBox="0 0 40 50" focusable="false">
               <use xlink:href="#bookmark"></use>
             </svg>
-            White belt
+            White belt / 12th Kyu
           </a>
         </h2>
       </li>        
@@ -267,7 +267,7 @@
             <svg class="bookmark" aria-hidden="true" viewBox="0 0 40 50" focusable="false">
               <use xlink:href="#bookmark"></use>
             </svg>
-            Red belt
+            Red belt / 11th Kyu
           </a>
         </h2>
       </li>        
@@ -278,7 +278,7 @@
             <svg class="bookmark" aria-hidden="true" viewBox="0 0 40 50" focusable="false">
               <use xlink:href="#bookmark"></use>
             </svg>
-            Red/black belt
+            Red-black belt / 10th Kyu
           </a>
         </h2>
       </li>        
@@ -289,7 +289,7 @@
             <svg class="bookmark" aria-hidden="true" viewBox="0 0 40 50" focusable="false">
               <use xlink:href="#bookmark"></use>
             </svg>
-            Yellow belt
+            Yellow belt / 9th Kyu
           </a>
         </h2>
       </li>        
@@ -300,7 +300,7 @@
             <svg class="bookmark" aria-hidden="true" viewBox="0 0 40 50" focusable="false">
               <use xlink:href="#bookmark"></use>
             </svg>
-            Yellow/orange belt
+            Yellow-orange belt / 8th Kyu
           </a>
         </h2>
       </li>        
@@ -311,7 +311,7 @@
             <svg class="bookmark" aria-hidden="true" viewBox="0 0 40 50" focusable="false">
               <use xlink:href="#bookmark"></use>
             </svg>
-            Orange belt
+            Orange belt / 7th Kyu
           </a>
         </h2>
       </li>        
@@ -322,7 +322,7 @@
             <svg class="bookmark" aria-hidden="true" viewBox="0 0 40 50" focusable="false">
               <use xlink:href="#bookmark"></use>
             </svg>
-            Green belt
+            Green belt / 6th Kyu
           </a>
         </h2>
       </li>        
@@ -333,7 +333,7 @@
             <svg class="bookmark" aria-hidden="true" viewBox="0 0 40 50" focusable="false">
               <use xlink:href="#bookmark"></use>
             </svg>
-            Blue belt
+            Blue belt / 5th Kyu
           </a>
         </h2>
       </li>        
@@ -344,7 +344,7 @@
             <svg class="bookmark" aria-hidden="true" viewBox="0 0 40 50" focusable="false">
               <use xlink:href="#bookmark"></use>
             </svg>
-            Purple belt
+            Purple belt / 4th Kyu
           </a>
         </h2>
       </li>        
@@ -355,7 +355,7 @@
             <svg class="bookmark" aria-hidden="true" viewBox="0 0 40 50" focusable="false">
               <use xlink:href="#bookmark"></use>
             </svg>
-            Brown belt
+            Brown belt / 3rd Kyu
           </a>
         </h2>
       </li>        
@@ -366,7 +366,7 @@
             <svg class="bookmark" aria-hidden="true" viewBox="0 0 40 50" focusable="false">
               <use xlink:href="#bookmark"></use>
             </svg>
-            Brown/black belt
+            Brown-black belt / 2nd Kyu
           </a>
         </h2>
       </li>        
@@ -377,7 +377,7 @@
             <svg class="bookmark" aria-hidden="true" viewBox="0 0 40 50" focusable="false">
               <use xlink:href="#bookmark"></use>
             </svg>
-            Black/brown belt
+            Black-brown belt / 1st Kyu
           </a>
         </h2>
       </li>        
