--- a/stripes/orange/index.html
+++ b/stripes/orange/index.html
@@ -32,7 +32,7 @@
 
   
   
-  <title>Orange belt | Kamaete: Karate at Home</title>
+  <title>Orange belt / 7th Kyu | Kamaete: Karate at Home</title>
 </head>
 
   <body>
@@ -247,7 +247,7 @@
         <div>
           
   <main id="main">
-    <h1>Orange belt</h1>
+    <h1>Orange belt / 7th Kyu</h1>
     <h2 id="basics">Basics</h2>
 <div class="expandable-section">
   
