--- a/stripes/purple/index.html
+++ b/stripes/purple/index.html
@@ -32,7 +32,7 @@
 
   
   
-  <title>Purple belt | Kamaete: Karate at Home</title>
+  <title>Purple belt / 4th Kyu | Kamaete: Karate at Home</title>
 </head>
 
   <body>
@@ -247,7 +247,7 @@
         <div>
           
   <main id="main">
-    <h1>Purple belt</h1>
+    <h1>Purple belt / 4th Kyu</h1>
     <h2 id="basics">Basics</h2>
 <div class="expandable-section">
   
