--- a/stripes/white/index.html
+++ b/stripes/white/index.html
@@ -32,7 +32,7 @@
 
   
   
-  <title>White belt | Kamaete: Karate at Home</title>
+  <title>White belt / 12th Kyu | Kamaete: Karate at Home</title>
 </head>
 
   <body>
@@ -247,7 +247,7 @@
         <div>
           
   <main id="main">
-    <h1>White belt</h1>
+    <h1>White belt / 12th Kyu</h1>
     <h2 id="stances">Stances</h2>
 <div class="expandable-section">
   
